--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cryptom2/magento-discount-token",
-    "version": "v1.0.0",
+    "version": "v1.0.1",
     "description": "Magento 2 ERC20 token discount extension",
     "type": "magento2-module",
     "authors": [
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "cryptom2/base": "v1.0.1"
+        "cryptom2/base": ">=1.0.1"
     },
     "license": "MIT",
     "autoload": {
